--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hadya's website</title>
+    <title>Hadya's portfolio</title>
 </head>
 <body>
     <h1>Hadya's Portfolio</h1>
